<resources>
    <string name="app_name">RutePantry</string>
    <!-- General String -->
    <string name="plus">+</string>
    <string name="icon">RAFODIA</string>
    <string name="button_foodPedia">Food Pedia</string>
    <string name="button_pantry">Pantry</string>
    <!-- Pantries String -->
    <string name="title_pantry">Pantry</string>
    <string name="tanggal1_pantry">10/22/2020</string>
    <string name="qty1_pantry">Qty: 2</string>
    <string name="tanggal2_pantry">10/21/2020</string>
    <string name="qty2_pantry">Qty: 0</string>
    <string name="kadaluarsa">Beberapa bahan mungkin akan segera kadaluarsa.</string>
    <!-- Groceries String -->
    <string name="title_groceries">Groceries</string>
    <!-- Empty Groceries String -->
    <string name="empty_groceries_content">Groceries Anda kosong. Tekan tombol + untuk menambahkan barang.</string>
    <!-- Filled Groceries String -->
    <string name="item2_name">Kentang</string>
    <string name="item2_expire">Akan kadalurasa dalam 2 hari</string>
    <string name="item2_qty">Qty: 1 Kg</string>
    <string name="item1_name">Daging Sapi</string>
    <string name="item1_expire">Akan kadaluarsa dalam 1 hari</string>
    <string name="item1_qty">Qty: 0.5 Kg</string>
    <!-- Input Groceries -->
    <string name="title_input_groceries">Tambahkan tanggal baru</string>
    <string name="content_input_groceries">Tambahkan tanggal pada form dibawah ini</string>
    <string name="button_input_groceries">Simpan</string>
    <!-- Input Item -->
    <string name="title_input_item">Tambahkan barang baru</string>
    <string name="subtitle_input_item">10/22/2020</string>
    <string name="item_input_item">Pilih jenis barang</string>
    <string name="quantity_input_item">Jumlah</string>
    <string name="button_input_item">Tambah</string>
    <!-- Start Page -->
    <string name="title_start_page">RAFODIA</string>
    <string name="textTagline">M a n a g e s    Y o u r    G r o c e r i e s</string>
    <string name="textnama">R A F O D I A</string>

    <!--list item-->
    <string name="title_category">Category</string>
    <string name="button_veg">Vegetables</string>
    <string name="button_fruit">Fruit</string>
    <string name="button_meat">Meat</string>
    <string name="button_seafood">Seafood</string>
    <string name="button_other">Other Ingredients</string>
    <string name="title_foodpedia_categories">Foodpedia - Sayuran</string>
    <string name="title_category_name">Sayuran</string>
    <string name="title_sort">Sort A to Z</string>
    <string name="item1_sayur">Kangkung</string>
    <string name="item2_sayur">Bayam</string>
    <string name="item3_sayur">Kentang</string>

    <!--item detail-->
    <string name="title_detail">Informasi Bahan-Kangkung</string>
    <string name="title_detail2">Informasi Bahan-Bayam</string>
    <string name="title_detail3">Informasi Bahan-Kentang</string>
    <string name="title_cara_simpan">Cara Penyimpanan:</string>
    <string name="title_tingkat_kesegaran">Tingkat Kesegaran:</string>
    <string name="content_kangkung">Simpan dalam kulkas tanpa perlu mencucinya terlebih dahulu.</string>
    <string name="content_kentang">Simpan di tempat yang kering dan teduh.</string>
    <string name="content_segar_kangkung">-</string>

</resources>