<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:id="@+id/titleInputItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_input_item"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/subtitleInputItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_input_item"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/selectLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/item_input_item"
                android:textSize="18sp" />

            <MultiAutoCompleteTextView
                android:id="@+id/selectInputItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24sp"
                android:hint="Select here..."
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quantity_input_item"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48sp"
                android:ems="10"
                android:hint="Enter a number.."
                android:inputType="number" />

            <Button
                android:id="@+id/buttonInputItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/buttonPantry"
                android:text="@string/button_input_item"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>