<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button"
    tools:context=".Pantry">


    <TextView
        android:id="@+id/text_rafodia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textnama"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/title_start_page"
        android:textSize="10pt"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/arialnb"
        android:text="@string/textnama"
        android:textSize="7pt"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textnama"
        android:layout_centerInParent="true"
        android:fontFamily="@font/arialni"
        android:text="@string/textTagline"
        tools:ignore="MissingConstraints" />

</RelativeLayout>