<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titlePantry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:text="@string/title_pantry"
                android:textSize="24sp" />

            <Button
                android:id="@+id/plusPantry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center_vertical|end"
                android:minWidth="0dip"
                android:text="@string/plus"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20sp">

            <RelativeLayout
                android:id="@+id/tanggal2"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginBottom="24sp"
                android:background="@color/buttonPantry"
                android:padding="12sp">

                <TextView
                    android:id="@+id/tanggal2Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/tanggal2_pantry"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/qty2Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/tanggal2Pantry"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/qty2_pantry"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tanggal1"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@color/buttonPantry"
                android:padding="12sp">

                <TextView
                    android:id="@+id/tanggal1Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/tanggal1_pantry"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/expiredFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tanggal1Pantry"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/kadaluarsa"
                    android:textColor="#FFD740" />

                <TextView
                    android:id="@+id/qty1Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/tanggal1Pantry"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/qty1_pantry"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>