<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputGroceries">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:id="@+id/titleInputGroceries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_input_groceries"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contentInputGroceries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24sp"
                android:gravity="center"
                android:text="@string/content_input_groceries"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/formInputGroceries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64sp"
                android:ems="10"
                android:hint="Enter a date..."
                android:inputType="date" />

            <Button
                android:id="@+id/buttonInputGroceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/buttonPantry"
                android:text="@string/button_input_groceries"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>