<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0sp">

        <RelativeLayout
            android:id="@+id/groceriesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp">

            <Button
                android:id="@+id/backButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/button_back" />

            <TextView
                android:id="@+id/iconAplikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:text="@string/icon"
                android:textColor="@color/background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pantryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iconAplikasi"
                android:layout_alignParentRight="true"
                android:text="@string/title_pantry"
                android:textColor="@color/background" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:id="@+id/titlePantry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12sp"
                android:background="@color/background"
                android:gravity="center_vertical"
                android:text="@string/title_pantry"
                android:textColor="@color/footer"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/tanggal2"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginBottom="24sp"
                android:background="@color/buttonPantry"
                android:padding="12sp">

                <TextView
                    android:id="@+id/tanggal2Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/tanggal2_pantry"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/qty2Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/tanggal2Pantry"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/qty2_pantry"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tanggal1"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@color/buttonPantry"
                android:padding="12sp">

                <TextView
                    android:id="@+id/tanggal1Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/tanggal1_pantry"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/expiredFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tanggal1Pantry"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/kadaluarsa"
                    android:textColor="#FFD740"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/qty1Pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/tanggal1Pantry"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/qty1_pantry"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/groceriesFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/footer"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp">

            <Button
                android:id="@+id/pantryButton"
                style="@android:style/Widget.Button"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginLeft="12sp"
                android:layout_toRightOf="@id/addPantry"
                android:background="@drawable/button_pantry" />

            <Button
                android:id="@+id/addPantry"
                style="@android:style/Widget.Button"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_alignParentRight="false"
                android:layout_centerInParent="true"
                android:layout_gravity="right|end"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:background="@drawable/button_add_footer"
                android:textColor="@color/header"
                android:textSize="14sp" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginRight="12sp"
                android:layout_toLeftOf="@id/addPantry"
                android:background="@drawable/button_home" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>